<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手机助手</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- Logo界面 -->
    <string name="logo_name">logo</string>

    <!-- Guide界面 -->
    <string name="guide_views">图片集</string>
    <string name="guide_view1">小图标1</string>
    <string name="guide_view2">小图标2</string>
    <string name="guide_view3">小图标3</string>
    <!-- ActionBar界面 -->
    <string name="action_bar_icon_left">actionbar左边的图标</string>
    <string name="action_bar_icon_right">actionbar右边的图标</string>
    <!-- homepage界面 -->
    <string name="home_about">关于我们</string>
    <string name="home_setting">设置</string>
    <string name="home_rocket">手机加速</string>
    <string name="home_software">软件管理</string>
    <string name="home_hardware">硬件信息</string>
    <string name="home_contacts">通讯大全</string>
    <string name="home_filemanage">文件管理</string>
    <string name="home_sdcardclean">垃圾清理</string>
    <!-- 一键加速 -->
    <string name="home_score_imageview">加速图标</string>
    <string name="home_scoretext_preview">15</string>
    <string name="home_scoretext_per">%</string>
    <string name="home_scoretext_start">开始加速</string>
    <!-- about界面 -->
    <string name="about_text">隔壁老王出品</string>
    <string name="about_icon_describe">这是关于界面图标</string>
    <string name="about_title">关于</string>
    <string name="title_activity_setting">SettingActivity</string>
    <!-- Settings -->
    <string name="setting_item1">开机启动</string>
    <string name="setting_item2">通知图标</string>
    <string name="setting_item3">消息推送</string>
    <string name="setting_item4">帮助说明</string>
    <string name="setting_item5">意见反馈</string>
    <string name="setting_item6">好友分享</string>
    <string name="setting_item7">版本更新</string>
    <string name="setting_item8">关于我们</string>
    <!-- hardware_battery -->
    <string name="hardware_battery_text">80</string>
    <string name="hardware_battery_dialog">电池信息</string>
    <string name="hardware_phone_items_icon">这是电池信息icon的describe</string>
    <string name="hardware_phone_item_top">text</string>
    <string name="hardware_phone_item_buttom">text</string>
    <!-- 手机加速 -->
    <string name="phone_brand">品牌名字</string>
    <string name="phone_name">手机名字</string>
    <string name="phone_version">安卓版本</string>
    <string name="phone_cleanbtn">一键加速</string>
    <string name="phone_showprogeress">显示系统进程</string>
    <string name="phone_memory">已用内存:166.41m/1.97G</string>
    <string name="phone_item_image_describe">应用的图片</string>
    <string name="phone_item_appname">应用名字</string>
    <string name="phone_item_appmemory">应用占用内存</string>
    <string name="phone_item_applevel">系统应用</string>
    <!-- 软件管理 -->
    <string name="soft_manager_iv_desrcibe">这是大饼</string>
    <string name="soft_manager_inside">手机内置空间</string>
    <string name="soft_manager_outside">外置存储空间</string>
    <string name="soft_manager_sys_soft">系统软件</string>
    <string name="soft_manager_user_soft">用户软件</string>
    <string name="soft_manager_all_soft">所有软件</string>
    <string name="soft_manager_uninstall">卸载</string>
    <string name="layout_soft_manager_item_image_describe">这是item图片</string>
    <string name="layout_soft_manager_item_appname">应用名</string>
    <string name="layout_soft_manager_item_packgename">包名</string>
    <string name="layout_soft_manager_item_appversion">版本号</string>
    <!-- 文件管理 -->
    <string name="file_manager_file_priview">0.00G</string>
    <string name="file_manager_file_title">已发现</string>
    <string name="file_manager_allfile">全部</string>
    <string name="file_manager_file">文档</string>
    <string name="file_manager_video">视频</string>
    <string name="file_manager_audio">音频</string>
    <string name="file_manager_image">图像</string>
    <string name="file_manager_zip">压缩包</string>
    <string name="file_manager_app">程序包</string>
    <string name="file_manager_arrowsdescribe">箭头描述</string>
    <string name="filemanager_detail_filecount">文件数量:</string>
    <string name="filemanager_detail_filecount_number">000个</string>
    <string name="filemanager_detail_usedspace">占用空间:</string>
    <string name="filemanager_detail_usedspace_number">00M</string>
    <string name="filemanager_detail_button">删除所选文件</string>
    <string name="filemanager_detail_item_describe">图片描述</string>
    <string name="filemanager_detail_item_name">名字.avi</string>
    <string name="filemanager_detail_item_data">2015.2.1</string>
	<string name="filemanager_detail_item_szie">141k</string>
	<!-- 垃圾清理 -->
	<string name="phone_clean_title">已发现</string>
	<string name="phone_clean_totalsize">0B</string>
	<string name="phone_clean_button">一键清理</string>
	<string name="phone_clean_item_appname">app名字</string>
	<string name="phone_clean_item_appsize">大小</string>
	<string name="phone_clean_item_icon_describe">icon描述</string>
	<!-- 设置界面 -->
	<string name="layout_notification_icon">icon描述</string>
	<string name="layout_notification_title">手机助手正在保护你的手机</string>
	<string name="layout_notification_content">点击可打开</string>
</resources>