<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/layout_action_bar" />

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filemanager_detail_filecount" />

        <TextView
            android:id="@+id/filemanager_detail_filecount_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filemanager_detail_filecount_number"
            android:textColor="@color/yellow_light"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filemanager_detail_usedspace" />

        <TextView
            android:id="@+id/filemanager_detail_usedspace_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filemanager_detail_usedspace_number"
            android:textColor="@color/yellow_light"
            android:textSize="30sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <ListView
        android:id="@+id/filemanager_detail_listiew"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

    <Button
        android:id="@+id/filemanager_detail_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/phone_clean_selector"
        android:text="@string/filemanager_detail_button" />

</LinearLayout>