<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/phone_clean_item_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:contentDescription="@string/about_icon_describe"
        android:src="@drawable/ic_launcher"
        android:id="@+id/phone_clean_item_icon"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/phone_clean_item_appname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/phone_clean_item_appname" />

    <TextView
        android:id="@+id/phone_clean_item_appsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_clean_item_appsize" />

</LinearLayout>