<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <CheckBox
        android:id="@+id/phone_speed_item_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/phone_speed_item_appiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/phone_item_image_describe"
        android:src="@drawable/setting_info_icon_version" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/phone_item_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/phone_item_appname" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/phone_item_appmemory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_item_appmemory" />

            <TextView
                android:id="@+id/phone_item_applevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/phone_item_applevel"
                android:textColor="@color/red" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>