<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp" >

    <CheckBox
        android:id="@+id/filemanager_detail_item_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/filemanager_detail_item_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/filemanager_detail_item_describe"
        android:src="@drawable/setting_info_icon_camera" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/filemanager_detail_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filemanager_detail_item_name"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/filemanager_detail_item_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filemanager_detail_item_data"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/filemanager_detail_item_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filemanager_detail_item_szie"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>