<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/actionbar_height"
    android:background="@drawable/home_entry_item_normal" >

    <ImageView
        android:id="@+id/action_bar_icon_left"
        android:layout_width="@dimen/actionbar_icon_width"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/actionbar_icon_selector"
        android:clickable="true"
        android:contentDescription="@string/action_bar_icon_left"
        android:onClick="homeItemHit"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/action_bar_icon_right"
        android:layout_width="@dimen/actionbar_icon_width"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/actionbar_icon_selector"
        android:clickable="true"
        android:contentDescription="@string/action_bar_icon_right"
        android:onClick="homeItemHit"
        android:src="@drawable/ic_child_configs" />

    <TextView
        android:id="@+id/action_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/actionbar_title_size" />

</RelativeLayout>