<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <android.support.v4.view.ViewPager
        android:id="@+id/guide_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/guide_icons_maginbutton"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="@dimen/guide_icon_width"
            android:layout_height="@dimen/guide_icon_height"
            android:layout_margin="@dimen/guide_icon_magin"
            android:contentDescription="@string/guide_view1"
            android:src="@drawable/guide_views_selector" />

        <ImageView
            android:id="@+id/iv2"
            android:layout_width="@dimen/guide_icon_width"
            android:layout_height="@dimen/guide_icon_height"
            android:layout_margin="@dimen/guide_icon_magin"
            android:contentDescription="@string/guide_view2"
            android:src="@drawable/guide_views_selector" />

        <ImageView
            android:id="@+id/iv3"
            android:layout_width="@dimen/guide_icon_width"
            android:layout_height="@dimen/guide_icon_height"
            android:layout_margin="@dimen/guide_icon_magin"
            android:contentDescription="@string/guide_view3"
            android:src="@drawable/guide_views_selector" />
    </LinearLayout>

</RelativeLayout>